--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="instagram-frame">
             <div class="header">
                 <div class="profile">
-                <img src="IMAGES/images/profile (1).jpg" alt="Profile Picture">
+                <img src="images/images/profile (1).jpg" alt="Profile Picture">
                 <span>Clarise Mae Elle</span>
             </div>
             <div class="dots">
@@ -35,9 +35,9 @@
             </div>
         </div>
         <div class="image-carousel">
-            <img src="IMAGES/images/profile (5).jpg" alt="Main Image 1" class="active">
-            <img src="IMAGES/images/profile (3).jpg" alt="Main Image 2">
-            <img src="IMAGES/images/profile (4).jpg" alt="Main Image 3">
+            <img src="images/images/profile (5).jpg" alt="Main Image 1" class="active">
+            <img src="images/images/profile (3).jpg" alt="Main Image 2">
+            <img src="images/images/profile (4).jpg" alt="Main Image 3">
           </div>
             <div class="navigation-dots">
                 <span class="dot active" data-index="0"></span>
@@ -79,6 +79,6 @@
     <!-- Falling cat images will be added here by JavaScript -->
 </div>
 
-<script src="JS Script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
