--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </section>
 
 <div id="animation-area">
-    <!-- Falling cat images will be added here by JavaScript -->
+    <!-- Falling cat images added by JavaScript -->
 </div>
 
 <script src="script.js"></script>
