--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#" class="logo">ELLE</a>
         <nav>
             <a href="#" class="nav-link active">Home</a>
-            <a href="#" class="nav-link">About</a>
+            <a href="about.html" class="nav-link">About</a>
             <a href="#" class="nav-link">Hobbies</a>
             <a href="#" class="nav-link">Contact</a>
         </nav>
@@ -56,7 +56,7 @@
         <h1>Hi, welcome to my website!</h1>
         <p>
             I'm Clarise Mae Elle<br>
-            a 3rd Year BS in Computer Science Major<br>
+            a 4th-year BS in Computer Science Major<br>
             Studying at Technological University of the Philippines - Manila
         </p>
 
@@ -71,7 +71,7 @@
                 <i class="fa-brands fa-github"></i>
             </a>
         </div>
-        <a href="#" class="btn">About Me</a>
+        <a href="about.html" class="btn">About Me</a>
     </div>
 </section>
 
