--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <div class="image-grid">
         <!-- Image items with click event -->
         <div class="image-item" onclick="openModal()">
-            <img src="images/profile.jpg" alt="Clarise Mae Elle">
+            <img src="images/images/profile.jpg" alt="Clarise Mae Elle">
         </div>
         <div class="image-item" onclick="openModal()">
-            <img src="images/profile.jpg" alt="Clarise Mae Elle">
+            <img src="images/images/profile.jpg" alt="Clarise Mae Elle">
         </div>
         <div class="image-item" onclick="openModal()">
-            <img src="images/profile.jpg" alt="Clarise Mae Elle">
+            <img src="images/images/profile.jpg" alt="Clarise Mae Elle">
         </div>
     </div>
 </section>
@@ -21,7 +21,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <div class="modal-info">
-            <img src="images/profile.jpg" alt="Clarise Mae Elle">
+            <img src="images/images/profile.jpg" alt="Clarise Mae Elle">
             <div class="note-content">
                 <h2>Note:</h2>
                 <p>I really like taking pictures of nature. Be it trees, flowers, animals, etc. When I see nature, it just makes me want to capture it.</p>
