--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
      <!-- Navigation Bar -->
-     <header>
+    <header>
         <a href="#" class="logo">ELLE</a>
         <nav>
-            <a href="#" class="nav-link active">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="#" class="nav-link">Hobbies</a>
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#home" class="nav-link active">Home</a>
+            <a href="#skills" class="nav-link">Skills</a>
+            <a href="#projects" class="nav-link">Projects</a>
+            <a href="#contact" class="nav-link">Contact</a>
         </nav>
     </header>
 
@@ -71,7 +71,51 @@
                 <i class="fa-brands fa-github"></i>
             </a>
         </div>
-        <a href="about.html" class="btn">About Me</a>
+        <a href="#about" class="btn">About Me</a>
+    </div>
+</section>
+
+
+<!-- SKILLS SECTION -->
+<section id="skills" class="skills-section">
+    <div class="skills-container">
+
+        <div class="skills-box">
+            <h2>Soft Skills</h2>
+            <div class="skills-card">
+                <ul>
+                    <li>Communication</li>
+                    <li>Teamwork</li>
+                    <li>Problem Solving</li>
+                    <li>Time Management</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="skills-box">
+            <h2>Technical Skills</h2>
+            <div class="skills-card">
+                <ul>
+                    <li>HTML / CSS / JavaScript</li>
+                    <li>React</li>
+                    <li>Python</li>
+                    <li>YOLOv8 / CNN</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="skills-box">
+            <h2>Tools</h2>
+            <div class="skills-card">
+                <ul>
+                    <li>Git & GitHub</li>
+                    <li>VS Code</li>
+                    <li>Figma</li>
+                    <li>Postman</li>
+                </ul>
+            </div>
+        </div>
+
     </div>
 </section>
 
