--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <i class="fa-brands fa-github"></i>
             </a>
         </div>
-        <a href="#about" class="btn">About Me</a>
+        <a href="#skills" class="btn">My Skills</a>
     </div>
 </section>
 
