--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                     <li>Teamwork</li>
                     <li>Problem Solving</li>
                     <li>Time Management</li>
+                    <li>Adaptability</li>
                 </ul>
             </div>
         </div>
@@ -98,7 +99,10 @@
                     <li>HTML / CSS / JavaScript</li>
                     <li>React</li>
                     <li>Python</li>
-                    <li>YOLOv8 / CNN</li>
+                    <li>PHP</li>
+                    <li>SQL / MySQL</li>
+                    <li>React Native</li>
+                    <li>Expo</li>    
                 </ul>
             </div>
         </div>
@@ -110,7 +114,16 @@
                     <li>Git & GitHub</li>
                     <li>VS Code</li>
                     <li>Figma</li>
-                    <li>Postman</li>
+                    <li>Canva</li>
+                    <li>Meta</li>
+                    <li>OBS</li>
+                    <li>Google Workspace</li>
+                    <li>Feed Files</li>
+                    <li>A+ Conten</li>
+                    <li>Amazon Seller Central</li>                    
+                    <li>Amazon SEO</li>
+                    <li>Helium10</li>
+                    <li>Shopify</li>
                 </ul>
             </div>
         </div>
