--- a/index.html
+++ b/index.html
@@ -115,14 +115,11 @@
                     <li>VS Code</li>
                     <li>Figma</li>
                     <li>Canva</li>
-                    <li>Meta</li>
-                    <li>OBS</li>
+                    <li>Meta, OBS</li>
                     <li>Google Workspace</li>
                     <li>Feed Files</li>
-                    <li>A+ Conten</li>
-                    <li>Amazon Seller Central</li>                    
-                    <li>Amazon SEO</li>
-                    <li>Helium10</li>
+                    <li>Amazon Seller Central, A+ Content</li>                    
+                    <li>Amazon SEO, Helium10</li>
                     <li>Shopify</li>
                 </ul>
             </div>
