udpated design and added project section

--- a/index.html
+++ b/index.html
@@ -128,6 +128,58 @@
     </div>
 </section>
 
+
+<section id="projects" class="projects-section">
+    <h2 class="section-title">PROJECTS</h2>
+    
+    <div class="projects-grid">
+        
+        <a href="#" class="project-link" target="_blank">
+            <div class="instagram-frame project-frame">
+                <div class="header">
+                    <div class="profile">
+                        <img src="images/images/profile (1).jpg" alt="Profile">
+                        <span>AI-Clone Chatbot</span>
+                    </div>
+                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
+                </div>
+                <div class="image-area">
+                    <img src="images/images/profile (5).jpg" alt="Project Image">
+                </div>
+                <div class="footer">
+                    <i class="fa fa-heart"></i>
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa fa-bookmark bookmark-icon"></i>
+                </div>
+            </div>
+        </a>
+
+        <a href="#" class="project-link" target="_blank">
+            <div class="instagram-frame project-frame">
+                <div class="header">
+                    <div class="profile">
+                        <img src="images/images/profile (1).jpg" alt="Profile">
+                        <span>eBrgy-PH</span>
+                    </div>
+                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
+                </div>
+                <div class="image-area">
+                    <img src="images/images/profile (3).jpg" alt="Project Image">
+                </div>
+                <div class="footer">
+                    <i class="fa fa-heart"></i>
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa fa-bookmark bookmark-icon"></i>
+                </div>
+            </div>
+        </a>
+
+        </div>
+</section>
+
+
 <div id="animation-area">
     <!-- Falling cat images added by JavaScript -->
 </div>
