--- a/index.html
+++ b/index.html
@@ -113,12 +113,11 @@
                 <ul>
                     <li>Git & GitHub</li>
                     <li>VS Code</li>
-                    <li>Figma</li>
-                    <li>Canva</li>
+                    <li>Figma, Canva</li>
                     <li>Meta, OBS</li>
                     <li>Google Workspace</li>
-                    <li>Feed Files</li>
-                    <li>Amazon Seller Central, A+ Content</li>                    
+                    <li>A+ Content</li>
+                    <li>Amazon Seller Central</li>                    
                     <li>Amazon SEO, Helium10</li>
                     <li>Shopify</li>
                 </ul>
