--- a/index.html
+++ b/index.html
@@ -127,6 +127,91 @@
     </div>
 </section>
 
+<section id="projects" class="projects-section">
+    <div class="projects-container">
+        <h2 class="section-title">PROJECTS</h2>
+        
+        <div class="projects-grid">
+            
+            <div class="instagram-frame project-card">
+                <div class="header">
+                    <div class="profile">
+                        <img src="images/images/profile (1).jpg" alt="Profile">
+                        <span>AI-Clone Chatbot</span>
+                    </div>
+                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
+                </div>
+                <div class="image-area">
+                    <img src="images/images/profile (5).jpg" alt="Project 1">
+                </div>
+                <div class="footer">
+                    <i class="fa fa-heart heart-icon"></i>
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
+                </div>
+            </div>
+
+            <div class="instagram-frame project-card">
+                <div class="header">
+                    <div class="profile">
+                        <img src="images/images/profile (1).jpg" alt="Profile">
+                        <span>eBrgy-PH</span>
+                    </div>
+                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
+                </div>
+                <div class="image-area">
+                    <img src="images/images/profile (3).jpg" alt="Project 2">
+                </div>
+                <div class="footer">
+                    <i class="fa fa-heart heart-icon"></i>
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
+                </div>
+            </div>
+
+            <div class="instagram-frame project-card">
+                <div class="header">
+                    <div class="profile">
+                        <img src="images/images/profile (1).jpg" alt="Profile">
+                        <span>AI-Scorer Front End</span>
+                    </div>
+                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
+                </div>
+                <div class="image-area">
+                    <img src="images/images/profile (4).jpg" alt="Project 3">
+                </div>
+                <div class="footer">
+                    <i class="fa fa-heart heart-icon"></i>
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
+                </div>
+            </div>
+
+            <div class="instagram-frame project-card">
+                <div class="header">
+                    <div class="profile">
+                        <img src="images/images/profile (1).jpg" alt="Profile">
+                        <span>JPI Chatbot</span>
+                    </div>
+                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
+                </div>
+                <div class="image-area">
+                    <img src="images/images/profile (5).jpg" alt="Project 4">
+                </div>
+                <div class="footer">
+                    <i class="fa fa-heart heart-icon"></i>
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
+                </div>
+            </div>
+
+            </div>
+    </div>
+</section>
 
 <div id="animation-area">
     <!-- Falling cat images added by JavaScript -->
