updated project section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
                 </div>
                 <div class="image-area">
-                    <img src="images/images/profile (5).jpg" alt="AI-Clone Chatbot">
+                    <img src="images/images/profile (5).jpg" alt="Project 1">
                 </div>
                 <div class="footer">
                     <i class="fa fa-heart heart-icon"></i>
@@ -161,7 +161,7 @@
                     <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
                 </div>
                 <div class="image-area">
-                    <img src="images/images/profile (3).jpg" alt="eBrgy-PH">
+                    <img src="images/images/profile (3).jpg" alt="Project 2">
                 </div>
                 <div class="footer">
                     <i class="fa fa-heart heart-icon"></i>
@@ -180,7 +180,7 @@
                     <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
                 </div>
                 <div class="image-area">
-                    <img src="images/images/profile (4).jpg" alt="AI-Scorer Front End">
+                    <img src="images/images/profile (4).jpg" alt="Project 3">
                 </div>
                 <div class="footer">
                     <i class="fa fa-heart heart-icon"></i>
@@ -199,7 +199,7 @@
                     <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
                 </div>
                 <div class="image-area">
-                    <img src="images/images/profile (5).jpg" alt="JPI Chatbot">
+                    <img src="images/images/profile (5).jpg" alt="Project 4">
                 </div>
                 <div class="footer">
                     <i class="fa fa-heart heart-icon"></i>
@@ -209,83 +209,7 @@
                 </div>
             </div>
 
-            <div class="instagram-frame project-card">
-                <div class="header">
-                    <div class="profile">
-                        <img src="images/images/profile (1).jpg" alt="Profile">
-                        <span>Sleep-Sort Algo</span>
-                    </div>
-                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
-                </div>
-                <div class="image-area">
-                    <img src="images/images/profile (3).jpg" alt="Sleep-Sort Algo">
-                </div>
-                <div class="footer">
-                    <i class="fa fa-heart heart-icon"></i>
-                    <i class="fa fa-comment"></i>
-                    <i class="fa fa-paper-plane"></i>
-                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
-                </div>
             </div>
-
-            <div class="instagram-frame project-card">
-                <div class="header">
-                    <div class="profile">
-                        <img src="images/images/profile (1).jpg" alt="Profile">
-                        <span>AI-Scorer Figma</span>
-                    </div>
-                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
-                </div>
-                <div class="image-area">
-                    <img src="images/images/profile (4).jpg" alt="AI-Scorer Figma">
-                </div>
-                <div class="footer">
-                    <i class="fa fa-heart heart-icon"></i>
-                    <i class="fa fa-comment"></i>
-                    <i class="fa fa-paper-plane"></i>
-                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
-                </div>
-            </div>
-
-            <div class="instagram-frame project-card">
-                <div class="header">
-                    <div class="profile">
-                        <img src="images/images/profile (1).jpg" alt="Profile">
-                        <span>eBrgy-PH Figma</span>
-                    </div>
-                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
-                </div>
-                <div class="image-area">
-                    <img src="images/images/profile (5).jpg" alt="eBrgy-PH Figma">
-                </div>
-                <div class="footer">
-                    <i class="fa fa-heart heart-icon"></i>
-                    <i class="fa fa-comment"></i>
-                    <i class="fa fa-paper-plane"></i>
-                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
-                </div>
-            </div>
-
-             <div class="instagram-frame project-card">
-                <div class="header">
-                    <div class="profile">
-                        <img src="images/images/profile (1).jpg" alt="Profile">
-                        <span>Beauty Advisor</span>
-                    </div>
-                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
-                </div>
-                <div class="image-area">
-                    <img src="images/images/profile (3).jpg" alt="Beauty Advisor">
-                </div>
-                <div class="footer">
-                    <i class="fa fa-heart heart-icon"></i>
-                    <i class="fa fa-comment"></i>
-                    <i class="fa fa-paper-plane"></i>
-                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
-                </div>
-            </div>
-
-        </div>
     </div>
 </section>
 
