--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="image-area">
                     <a href="https://www.figma.com/design/jWdTPZb2qoNuDeoucFb7T2/eBrgyPH-wireframe?m=auto&t=fxL6FmET9RcIr6D8-1" target="_blank">
-                        <img src="images/images/profile (3).jpg" alt="eBrgy-PH">
+                        <img src="images/eBrgy.png" alt="eBrgy-PH">
                     </a>
                 </div>
                 <div class="footer">
@@ -163,7 +163,7 @@
                 </div>
                 <div class="image-area">
                     <a href="https://github.com/clarisemae/Handwritten-Exam-Checker-Record-Keeping-Mobile-Application" target="_blank">
-                        <img src="images/images/profile (4).jpg" alt="AI-Scorer Front End">
+                        <img src="images/AI-scorer.png" alt="AI-Scorer Front End">
                     </a>
                 </div>
                 <div class="footer">
@@ -184,7 +184,7 @@
                 </div>
                 <div class="image-area">
                     <a href="https://github.com/clarisemae/AI-Chatbot-of-my-senior-highschool-using-GEMINI-API" target="_blank">
-                        <img src="images/images/profile (5).jpg" alt="JPI Chatbot">
+                        <img src="images/JPI.png" alt="JPI Chatbot">
                     </a>
                 </div>
                 <div class="footer">
@@ -205,7 +205,7 @@
                 </div>
                 <div class="image-area">
                     <a href="https://github.com/clarisemae/Sleep-Sort-Visualization" target="_blank">
-                        <img src="images/images/profile (3).jpg" alt="Sleep-Sort Algo">
+                        <img src="images/sleep.png" alt="Sleep-Sort Algo">
                     </a>
                 </div>
                 <div class="footer">
@@ -226,7 +226,7 @@
                 </div>
                 <div class="image-area">
                     <a href="https://www.figma.com/design/qjyBvxD2QDAIcJUj4Muckc/AI-Handwritten-exam-scoring-wireframe?m=auto&t=fxL6FmET9RcIr6D8-6" target="_blank">
-                        <img src="images/images/profile (4).jpg" alt="AI-Scorer Figma">
+                        <img src="images/AI-scorer.png" alt="AI-Scorer Figma">
                     </a>
                 </div>
                 <div class="footer">
@@ -248,7 +248,7 @@
             </div>
                 <div class="image-area">
                     <a href="https://www.figma.com/design/vuunDoa8yKjwPwCTYMFmtc/ZenBank?m=auto&t=fxL6FmET9RcIr6D8-6" target="_blank">
-                        <img src="images/images/profile (5).jpg" alt="Zenbank Figma">
+                        <img src="images/zenbank.png" alt="Zenbank Figma">
                     </a>
                 </div>
                 <div class="footer">
@@ -270,7 +270,7 @@
             </div>
                 <div class="image-area">
                     <a href="https://www.figma.com/design/kWiWa15wqSgcuFJiERDzwO/Beauty-Advisor-High-Fidelity-Prototype?m=auto&t=fxL6FmET9RcIr6D8-6" target="_blank">
-                        <img src="images/images/profile (5).jpg" alt="Beauty Advisor Figma">
+                        <img src="images/bv.png" alt="Beauty Advisor Figma">
                     </a>
                 </div>
                 <div class="footer">
