--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
 
     <!-- Main Section -->
-     <section class="home">
-        <!-- Instagram Style Image Frame -->
+    <section id="home" class="home">        
+        
         <div class="instagram-frame">
             <div class="header">
                 <div class="profile">
