--- a/index.html
+++ b/index.html
@@ -131,17 +131,16 @@
         <h2 class="section-title">PROJECTS</h2>
         
         <div class="projects-grid">
-    
-            <div class="instagram-frame project-card">
+                <div class="instagram-frame project-card">
                 <div class="header">
                     <div class="profile">
                         <img src="images/images/profile (1).jpg" alt="Profile">
-                        <span>eBrgy-PH Figma Wireframe</span>
+                        <span>eBrgy-PH</span>
                     </div>
                     <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
                 </div>
                 <div class="image-area">
-                    <a href="https://www.figma.com/design/jWdTPZb2qoNuDeoucFb7T2/eBrgyPH-wireframe?m=auto&t=fxL6FmET9RcIr6D8-1" target="_blank">
+                    <a href="https://github.com/clarisemae/ebrgyph" target="_blank">
                         <img src="images/eBrgy.png" alt="eBrgy-PH">
                     </a>
                 </div>
@@ -206,6 +205,27 @@
                 <div class="image-area">
                     <a href="https://github.com/clarisemae/Sleep-Sort-Visualization" target="_blank">
                         <img src="images/sleep.png" alt="Sleep-Sort Algo">
+                    </a>
+                </div>
+                <div class="footer">
+                    <i class="fa fa-heart heart-icon"></i>
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa-regular fa-bookmark bookmark-icon"></i>
+                </div>
+            </div>
+
+            <div class="instagram-frame project-card">
+                <div class="header">
+                    <div class="profile">
+                        <img src="images/images/profile (1).jpg" alt="Profile">
+                        <span>eBrgy-PH Figma Wireframe</span>
+                    </div>
+                    <div class="dots"><i class="fa fa-ellipsis-h"></i></div>
+                </div>
+                <div class="image-area">
+                    <a href="https://www.figma.com/design/jWdTPZb2qoNuDeoucFb7T2/eBrgyPH-wireframe?node-id=48-2&p=f&t=K21sTWQC29chZRtq-0" target="_blank">
+                        <img src="images/eBrgy.png" alt="eBrgy-PH">
                     </a>
                 </div>
                 <div class="footer">
